--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html {
   background-color: rgb(236, 236, 236);
 }
-
+body {
+  margin: 0;
+}
 .page-title {
   position: fixed;
   top: 0;
@@ -22,23 +24,38 @@ a {
 .trip-text {
   background-color: #4ffa3f;
   padding: 0;
+  display: flex;
+
 }
 
 .trip-text p {
-  background-color: white;
+  background-color: lightgrey;
   margin: 0;
-  display: inline-block;
   width: 50%;
+  text-align: center;
+  color: coral;
 }
+
+.trip-imgs{
+  display: flex;
+}
+.trip-imgs img {
+  width: 50%;
+  height: 100%;
+} 
+
 .bar {
   height: 70px;
 }
 
 .feedback{
   background-color: aqua;
-  color: blue;
+  color: purple;
   text-align: center;
-
+  position: relative;
+  margin: 0;
+  bottom: 45px;
+  height: 45px;
 }
 
 img{
@@ -48,20 +65,31 @@ img{
 
 .navigation{
   text-align: center;
-}
+
+ }
 .navigation li, .navigation a{
   display: inline-block;
   width: 70px;
-  background-color: floralwhite;
-  border-width: 3px;
-  border-color: black;
+  background-color: lightcyan;
+
+
 }
-.review p, .review img {
-  display: inline;
-  vertical-align: middle;
+
+.review {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  border: 1px solid black;
+  background-color: white;
+  margin: 10px;
 }
 
 .review img {
-  width: 50%;
-  height: 50%;
+  width: 120px;
+}
+
+.review p {
+  width: 400px;
+  text-align: center;
 }
